refactors Dockerfile OpenJDK 11, env var for app dir, exec version of ENTRYPOINT, additional volume for config